--- a/1.html
+++ b/1.html
@@ -7,7 +7,7 @@
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html">HTMLTEST2</a></li>
+    <li><a href="1.html">HTMLCHANGED</a></li>
     <li><a href="2.html">CSSTEST3</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
